feat: provide //PREVIEW support
Signed-off-by: Fred Bricon <fbricon@gmail.com>